problemes des icones fixés, maintenant les icones apparaissent sans erreurs